Fix horizontal scroll (#5190)
resolves #5162

--- a/packages/frontend/scss/message/_message-attachment.scss
+++ b/packages/frontend/scss/message/_message-attachment.scss
@@ -1,4 +1,5 @@
 @use '../mixins';
+@use '../variables';
 // "Has content above" selector
 // (i.e. author title, "Forwarded" indicator, quote).
 //
@@ -101,8 +102,7 @@
     border-top-right-radius: 0px;
   }
 }
-
-@media (max-width: 900px) {
+@media (max-width: variables.$breakpoint-messagelist) {
   .message-attachment-media {
     & > .attachment-content {
       max-width: 100%;
